corrections sur .gitignore : DS_Store en trop, ajout venv

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 resultats/*.txt
 env/
 env_mac/
-.DS_Store
+venv/
 .DS_Store
 .ipynb_checkpoints/Chapter 2 - First steps-checkpoint.ipynb
 .ipynb_checkpoints/Chapter 5 - Building NLP Applications-checkpoint.ipynb
